--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/d02886dc88.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d02886dc88.js"
+      crossorigin="anonymous"
+    ></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -16,6 +19,5 @@
   <body>
     <noscript>Search for github users, using github's api</noscript>
     <div id="root"></div>
-
   </body>
 </html>
