Changed the name from 'git-finder' to 'git-finderr', Improved responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     ></script>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web app for searching github users"
     />
-    <title>Git-Finder</title>
+    <title>Git-Finderr</title>
   </head>
   <body>
     <noscript>Search for github users, using github's api</noscript>
