--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       name="description"
       content="Web app for searching github users"
     />
+    <link rel="icon" type="image/x-icon" href="/favicon192.png">
     <title>Git-Finderr</title>
   </head>
   <body>
