--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,8 @@
       src="https://kit.fontawesome.com/d02886dc88.js"
       crossorigin="anonymous"
     ></script>
-    <meta
-      name="description"
-      content="Web app for searching github users"
-    />
-    <link rel="icon" type="image/x-icon" href="/favicon192.png">
+    <meta name="description" content="Web app for searching github users" />
+    <link rel="icon" type="image/x-icon" href="/favicon192.png" />
     <title>Git-Finderr</title>
   </head>
   <body>
